* Added Xalan-C++ and zlib licenses to About screen
MOPPIOS-15

Signed-off-by: Sander Hunt <sander.hunt@fob-solutions.com>

--- a/MoppApp/MoppApp/AboutContent/licenses.html
+++ b/MoppApp/MoppApp/AboutContent/licenses.html
@@ -12,6 +12,13 @@ Apache License version 2.0
 <a class="link" href="http://www.apache.org/licenses/LICENSE-2.0.html">http://www.apache.org/licenses/LICENSE-2.0.html</a>
 </div>
 
+<div><b>Xalan-C++</b>
+<br/>
+Apache License version 2.0
+<br/>
+<a class="link" href="http://www.apache.org/licenses/LICENSE-2.0.html">http://www.apache.org/licenses/LICENSE-2.0.html</a>
+</div>
+
 <div><b>XML/L-Security-C</b>
 <br/>
 Apache License version 2.0
@@ -52,4 +59,11 @@ The FreeType Project License
 GNU Lesser General Public License
 <br/>
 <a class="link" href="https://www.gnu.org/copyleft/lesser.html">https://www.gnu.org/copyleft/lesser.html</a>
+</div>
+
+<div><b>zlib</b>
+<br/>
+zlib License
+<br/>
+<a class="link" href="https://zlib.net/zlib_license.html">https://zlib.net/zlib_license.html</a>
 </div>
