* Changed About screen logos
MOPPIOS-353

Signed-off-by: Sander Hunt <sander.hunt@fob-solutions.com>

--- a/MoppApp/MoppApp/AboutContent/about_et.html
+++ b/MoppApp/MoppApp/AboutContent/about_et.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="about.css">
 </head>
 <body>
-<div><img src="main_about_fonds.png"/></div>
+<div><img src="main_about_fonds_et.png"/></div>
 <div><h1>RIA DigiDoc versioon [APP_VERSION]</h1></div>
 <div>ID-tarkvara arendab Riigi Infosüsteemide Amet</div>
 <div>Küsimuste korral pöörduge ID-abiliinil poole e-kirja teel
