--- a/MoppApp/MoppApp/AboutContent/about_en.html
+++ b/MoppApp/MoppApp/AboutContent/about_en.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="about.css">
 </head>
 <body>
-<div><img src="main_about_fonds.png"/></div>
+<div><img src="main_about_fonds_en.png"/></div>
 <div><h1>RIA DigiDoc version [APP_VERSION]</h1></div>
 <div>ID software is developed by Estonian Information System Authority</div>
 <div>In case of questions contact the ID help-line by e-mail
