Fix translation issues (strings)
MOPPIOS-371

--- a/MoppApp/MoppApp/AboutContent/about_et.html
+++ b/MoppApp/MoppApp/AboutContent/about_et.html
@@ -5,10 +5,9 @@
 <body>
 <div><img src="main_about_fonds_et.png"/></div>
 <div><h1>RIA DigiDoc versioon [APP_VERSION]</h1></div>
-<div>ID-tarkvara arendab Riigi Infosüsteemide Amet</div>
-<div>Küsimuste korral pöörduge ID-abiliinil poole e-kirja teel
-<a class="email_link" href="mailto:abi@id.ee">abi@id.ee</a> või helistage Eesti-siseselt
-lühinumbril <a href="tel:1777">1777</a>, välismaalt (+372) 677 3377.</div>
+<div>Eesti ID-tarkvara on välja antud Riigi Infosüsteemi Ameti poolt</div>
+<div>Küsimuste korral pöörduge
+<a href="https://www.id.ee">id.ee</a></div>
 <br/>
 <div><h2>Täiendavad litsentsid ja komponendid</h2></div>
 [LICENSES]
