--- a/MoppApp/MoppApp/AboutContent/about_en.html
+++ b/MoppApp/MoppApp/AboutContent/about_en.html
@@ -5,12 +5,11 @@
 <body>
 <div><img src="main_about_fonds_en.png"/></div>
 <div><h1>RIA DigiDoc version [APP_VERSION]</h1></div>
-<div>ID software is developed by Estonian Information System Authority</div>
-<div>In case of questions contact the ID help-line by e-mail
-<a class="email_link" href="mailto:abi@id.ee">abi@id.ee</a> or call
-<a href="tel:1777">1777</a> within Estonia, (+372) 677 3377 abroad.</div>
+<div>Estonian ID-software is released by Information System Authority</div>
+<div>In case of questions please conctact our support via
+<a href="https://www.id.ee/?lang=en">id.ee</a></div>
 <br/>
-<div><h2>Licenses and components</h2></div>
+<div><h2>Additional licenses and components</h2></div>
 [LICENSES]
 </body>
 </html>
