--- a/MoppApp/MoppApp/AboutContent/about_ru.html
+++ b/MoppApp/MoppApp/AboutContent/about_ru.html
@@ -4,13 +4,12 @@
 </head>
 <body>
 <div><img src="main_about_fonds_en.png"/></div>
-<div><h1>RIA DigiDoc versioon [APP_VERSION]</h1></div>
-<div>ID-tarkvara arendab Riigi Infosüsteemide Amet</div>
-<div>Küsimuste korral pöörduge ID-abiliinil poole e-kirja teel
-<a class="email_link" href="mailto:abi@id.ee">abi@id.ee</a> või helistage Eesti-siseselt
-lühinumbril <a href="tel:1777">1777</a>, välismaalt (+372) 677 3377.</div>
+<div><h1>RIA DigiDoc версия [APP_VERSION]</h1></div>
+<div>Эстонское программное обеспечение ID выпущено Государственным департаментом инфосистем</div>
+<div>Если у вас возникнут вопросы, пожалуйста, обратитесь на
+<a href="https://www.id.ee/?lang=ru">id.ee</a></div>
 <br/>
-<div><h2>Täiendavad litsentsid ja komponendid</h2></div>
+<div><h2>Дополнительные лицензии и компоненты</h2></div>
 [LICENSES]
 </body>
 </html>
