Review and update used third party licenses and components
MOPPIOS-492

--- a/MoppApp/MoppApp/AboutContent/licenses.html
+++ b/MoppApp/MoppApp/AboutContent/licenses.html
@@ -67,3 +67,17 @@ zlib License
 <br/>
 <a class="link" href="https://zlib.net/zlib_license.html">https://zlib.net/zlib_license.html</a>
 </div>
+
+<div><b>ACS ACR3901U</b>
+<br/>
+User terms and conditions:
+<br/>
+<a class="link" href="https://www.acs.com.hk/en/">https://www.acs.com.hk/en/</a>
+</div>
+
+<div><b>Feitian R301/iR301U</b>
+<br/>
+User terms and conditions:
+<br/>
+<a class="link" href="https://www.ftsafe.com/">https://www.ftsafe.com/</a>
+</div>
