--- a/MoppApp/MoppApp/AboutContent/licenses.html
+++ b/MoppApp/MoppApp/AboutContent/licenses.html
@@ -68,6 +68,20 @@ zlib License
 <a class="link" href="https://zlib.net/zlib_license.html">https://zlib.net/zlib_license.html</a>
 </div>
 
+<div><b>cdoc</b>
+<br/>
+GNU Lesser General Public License (LGPL) version 2.1
+<br/>
+<a class="link" href="https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html">https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html</a>
+</div>
+
+<div><b>OpenLDAP 2.4.46</b>
+<br/>
+The OpenLDAP Public License
+<br/>
+<a class="link" href="https://www.openldap.org/software/release/license.html">https://www.openldap.org/software/release/license.html</a>
+</div>
+
 <div><b>ACS ACR3901U</b>
 <br/>
 User terms and conditions:
