--- a/MoppApp/MoppApp/AboutContent/about_et.html
+++ b/MoppApp/MoppApp/AboutContent/about_et.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="about.css">
 </head>
 <body>
-<div><img src="main_about_fonds_et.png"/></div>
+<div aria-hidden="true"><img aria-hidden="true" alt="" role="presentation" src="main_about_fonds_et.png"/></div>
 <div><h1>RIA DigiDoc versioon [APP_VERSION]</h1></div>
 <div>Eesti ID-tarkvara on välja antud Riigi Infosüsteemi Ameti poolt</div>
 <div>Küsimuste korral pöörduge
