--- a/MoppApp/MoppApp/AboutContent/about_ru.html
+++ b/MoppApp/MoppApp/AboutContent/about_ru.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="about.css">
 </head>
 <body>
-<div><img src="main_about_fonds_en.png"/></div>
+<div aria-hidden="true"><img aria-hidden="true" alt="" role="presentation" src="main_about_fonds_en.png"/></div>
 <div><h1>RIA DigiDoc версия [APP_VERSION]</h1></div>
 <div>Эстонское программное обеспечение ID выпущено Государственным департаментом инфосистем</div>
 <div>Если у вас возникнут вопросы, пожалуйста, обратитесь на
