Add frameworks / libraries licenses

--- a/MoppApp/MoppApp/AboutContent/licenses.html
+++ b/MoppApp/MoppApp/AboutContent/licenses.html
@@ -95,3 +95,24 @@ User terms and conditions:
 <br/>
 <a class="link" href="https://www.ftsafe.com/">https://www.ftsafe.com/</a>
 </div>
+
+<div><b>SwiftyRSA</b>
+<br/>
+The MIT License (MIT)
+<br/>
+<a class="link" href="https://github.com/TakeScoop/SwiftyRSA/blob/master/LICENSE">https://github.com/TakeScoop/SwiftyRSA/blob/master/LICENSE</a>
+</div>
+
+<div><b>swift-sh</b>
+<br/>
+Unlicense (Public Domain)
+<br/>
+<a class="link" href="https://github.com/mxcl/swift-sh/blob/master/LICENSE.md">https://github.com/mxcl/swift-sh/blob/master/LICENSE.md</a>
+</div>
+
+<div><b>SwCrypt</b>
+<br/>
+MIT License
+<br/>
+<a class="link" href="https://github.com/soyersoyer/SwCrypt/blob/master/LICENSE.md">https://github.com/soyersoyer/SwCrypt/blob/master/LICENSE.md</a>
+</div>
