--- a/MoppApp/MoppApp/AboutContent/licenses.html
+++ b/MoppApp/MoppApp/AboutContent/licenses.html
@@ -116,3 +116,10 @@ MIT License
 <br/>
 <a class="link" href="https://github.com/soyersoyer/SwCrypt/blob/master/LICENSE.md">https://github.com/soyersoyer/SwCrypt/blob/master/LICENSE.md</a>
 </div>
+
+<div><b>Zip</b>
+<br/>
+MIT License
+<br/>
+<a class="link" href="https://github.com/marmelroy/Zip/blob/master/LICENSE">https://github.com/marmelroy/Zip/blob/master/LICENSE</a>
+</div>
