--- a/MoppApp/MoppApp/AboutContent/licenses.html
+++ b/MoppApp/MoppApp/AboutContent/licenses.html
@@ -123,3 +123,10 @@ MIT License
 <br/>
 <a class="link" href="https://github.com/marmelroy/Zip/blob/master/LICENSE">https://github.com/marmelroy/Zip/blob/master/LICENSE</a>
 </div>
+
+<div><b>mid-rest-java-client</b>
+<br/>
+MIT License
+<br/>
+<a class="link" href="https://github.com/SK-EID/mid-rest-java-client/blob/master/LICENSE">https://github.com/SK-EID/mid-rest-java-client/blob/master/LICENSE</a>
+</div>
