Update translations and URLs

--- a/MoppApp/MoppApp/AboutContent/about_en.html
+++ b/MoppApp/MoppApp/AboutContent/about_en.html
@@ -7,7 +7,7 @@
 <div><h1>RIA DigiDoc version [APP_VERSION]</h1></div>
 <div>Estonian ID-software is released by Information System Authority</div>
 <div>In case of questions please conctact our support via
-<a href="https://www.id.ee/?lang=en">id.ee</a></div>
+<a href="https://www.id.ee/en/">id.ee</a></div>
 <br/>
 <div><h2>Additional licenses and components</h2></div>
 [LICENSES]
