--- a/MoppApp/MoppApp/AboutContent/about_et.html
+++ b/MoppApp/MoppApp/AboutContent/about_et.html
@@ -6,7 +6,7 @@
 <div aria-hidden="true"><img aria-hidden="true" alt="" role="presentation" src="main_about_fonds_et.png"/></div>
 <div><h1>RIA DigiDoc versioon [APP_VERSION]</h1></div>
 <div>Eesti ID-tarkvara on välja antud Riigi Infosüsteemi Ameti poolt</div>
-<div>Küsimuste korral pöörduge
+<div>Küsimuste korral pöördu
 <a href="https://www.id.ee">id.ee</a></div>
 <br/>
 <div><h2>Täiendavad litsentsid ja komponendid</h2></div>
