--- a/MoppApp/MoppApp/AboutContent/about_ru.html
+++ b/MoppApp/MoppApp/AboutContent/about_ru.html
@@ -7,7 +7,7 @@
 <div><h1>RIA DigiDoc версия [APP_VERSION]</h1></div>
 <div>Эстонское программное обеспечение ID выпущено Государственным департаментом инфосистем</div>
 <div>Если у вас возникнут вопросы, пожалуйста, обратитесь на
-<a href="https://www.id.ee/?lang=ru">id.ee</a></div>
+<a href="https://www.id.ee/ru/">id.ee</a></div>
 <br/>
 <div><h2>Дополнительные лицензии и компоненты</h2></div>
 [LICENSES]
