Simulator binaries + license version updates

--- a/MoppApp/MoppApp/AboutContent/licenses.html
+++ b/MoppApp/MoppApp/AboutContent/licenses.html
@@ -33,7 +33,7 @@ GNU General Public License, version 2
 <a class="link" href="https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html">https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html</a>
 </div>
 
-<div><b>OpenSSL 1.0</b>
+<div><b>OpenSSL 1.1.1k</b>
 <br/>
 OpenSSL License
 <br/>
@@ -75,7 +75,7 @@ GNU Lesser General Public License (LGPL) version 2.1
 <a class="link" href="https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html">https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html</a>
 </div>
 
-<div><b>OpenLDAP 2.4.46</b>
+<div><b>OpenLDAP 2.5.5</b>
 <br/>
 The OpenLDAP Public License
 <br/>
