--- a/MoppApp/MoppApp/AboutContent/licenses.html
+++ b/MoppApp/MoppApp/AboutContent/licenses.html
@@ -96,11 +96,11 @@ MIT License
 <a class="link" href="https://github.com/soyersoyer/SwCrypt/blob/master/LICENSE.md">https://github.com/soyersoyer/SwCrypt/blob/master/LICENSE.md</a>
 </div>
 
-<div><b>Zip</b>
+<div><b>ZipFoundation</b>
 <br/>
 MIT License
 <br/>
-<a class="link" href="https://github.com/marmelroy/Zip/blob/master/LICENSE">https://github.com/marmelroy/Zip/blob/master/LICENSE</a>
+<a class="link" href="https://github.com/weichsel/ZIPFoundation/blob/main/LICENSE">https://github.com/weichsel/ZIPFoundation/blob/main/LICENSE</a>
 </div>
 
 <div><b>mid-rest-java-client</b>
