Remove horizontal scrolling in About view

--- a/MoppApp/MoppApp/AboutContent/licenses.html
+++ b/MoppApp/MoppApp/AboutContent/licenses.html
@@ -1,118 +1,137 @@
-<div><b>libdigidocpp</b>
-<br/>
-GNU Lesser General Public License (LGPL) version 2.1
-<br/>
-<a class="link" href="https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html">https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html</a>
-</div>
+<div style="word-break: break-all;">
+    <div>
+        <strong>libdigidocpp</strong>
+        <br/>
+        GNU Lesser General Public License (LGPL) version 2.1
+        <br/>
+        <a class="link" href="https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html">https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html</a>
+    </div>
 
-<div><b>Xerces-C++</b>
-<br/>
-Apache License version 2.0
-<br/>
-<a class="link" href="http://www.apache.org/licenses/LICENSE-2.0.html">http://www.apache.org/licenses/LICENSE-2.0.html</a>
-</div>
+    <div>
+        <strong>Xerces-C++</strong>
+        <br/>
+        Apache License version 2.0
+        <br/>
+        <a class="link" href="http://www.apache.org/licenses/LICENSE-2.0.html">http://www.apache.org/licenses/LICENSE-2.0.html</a>
+    </div>
 
-<div><b>Xalan-C++</b>
-<br/>
-Apache License version 2.0
-<br/>
-<a class="link" href="http://www.apache.org/licenses/LICENSE-2.0.html">http://www.apache.org/licenses/LICENSE-2.0.html</a>
-</div>
+    <div>
+        <strong>Xalan-C++</strong>
+        <br/>
+        Apache License version 2.0
+        <br/>
+        <a class="link" href="http://www.apache.org/licenses/LICENSE-2.0.html">http://www.apache.org/licenses/LICENSE-2.0.html</a>
+    </div>
 
-<div><b>XML-Security-C</b>
-<br/>
-Apache License version 2.0
-<br/>
-<a class="link" href="http://www.apache.org/licenses/LICENSE-2.0.html">http://www.apache.org/licenses/LICENSE-2.0.html</a>
-</div>
+    <div>
+        <strong>XML-Security-C</strong>
+        <br/>
+        Apache License version 2.0
+        <br/>
+        <a class="link" href="http://www.apache.org/licenses/LICENSE-2.0.html">http://www.apache.org/licenses/LICENSE-2.0.html</a>
+    </div>
 
-<div><b>XSD</b>
-<br/>
-GNU General Public License, version 2
-<br/>
-<a class="link" href="https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html">https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html</a>
-</div>
+    <div>
+        <strong>XSD</strong>
+        <br/>
+        GNU General Public License, version 2
+        <br/>
+        <a class="link" href="https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html">https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html</a>
+    </div>
 
-<div><b>OpenSSL</b>
-<br/>
-OpenSSL License
-<br/>
-<a class="link" href="https://www.openssl.org/source/license.txt">https://www.openssl.org/source/license.txt</a>
-</div>
+    <div>
+        <strong>OpenSSL</strong>
+        <br/>
+        OpenSSL License
+        <br/>
+        <a class="link" href="https://www.openssl.org/source/license.txt">https://www.openssl.org/source/license.txt</a>
+    </div>
 
-<div><b>zlib</b>
-<br/>
-zlib License
-<br/>
-<a class="link" href="https://zlib.net/zlib_license.html">https://zlib.net/zlib_license.html</a>
-</div>
+    <div>
+        <strong>zlib</strong>
+        <br/>
+        zlib License
+        <br/>
+        <a class="link" href="https://zlib.net/zlib_license.html">https://zlib.net/zlib_license.html</a>
+    </div>
 
-<div><b>cdoc</b>
-<br/>
-GNU Lesser General Public License (LGPL) version 2.1
-<br/>
-<a class="link" href="https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html">https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html</a>
-</div>
+    <div>
+        <strong>cdoc</strong>
+        <br/>
+        GNU Lesser General Public License (LGPL) version 2.1
+        <br/>
+        <a class="link" href="https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html">https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html</a>
+    </div>
 
-<div><b>OpenLDAP</b>
-<br/>
-The OpenLDAP Public License
-<br/>
-<a class="link" href="https://www.openldap.org/software/release/license.html">https://www.openldap.org/software/release/license.html</a>
-</div>
+    <div>
+        <strong>OpenLDAP</strong>
+        <br/>
+        The OpenLDAP Public License
+        <br/>
+        <a class="link" href="https://www.openldap.org/software/release/license.html">https://www.openldap.org/software/release/license.html</a>
+    </div>
 
-<div><b>ACS ACR3901U</b>
-<br/>
-User terms and conditions:
-<br/>
-<a class="link" href="https://www.acs.com.hk/en/">https://www.acs.com.hk/en/</a>
-</div>
+    <div>
+        <strong>ACS ACR3901U</strong>
+        <br/>
+        User terms and conditions:
+        <br/>
+        <a class="link" href="https://www.acs.com.hk/en/">https://www.acs.com.hk/en/</a>
+    </div>
 
-<div><b>Feitian R301/iR301U</b>
-<br/>
-User terms and conditions:
-<br/>
-<a class="link" href="https://www.ftsafe.com/">https://www.ftsafe.com/</a>
-</div>
+    <div>
+        <strong>Feitian R301/iR301U</strong>
+        <br/>
+        User terms and conditions:
+        <br/>
+        <a class="link" href="https://www.ftsafe.com/">https://www.ftsafe.com/</a>
+    </div>
 
-<div><b>SwiftyRSA</b>
-<br/>
-The MIT License (MIT)
-<br/>
-<a class="link" href="https://github.com/TakeScoop/SwiftyRSA/blob/master/LICENSE">https://github.com/TakeScoop/SwiftyRSA/blob/master/LICENSE</a>
-</div>
+    <div>
+        <strong>SwiftyRSA</strong>
+        <br/>
+        The MIT License (MIT)
+        <br/>
+        <a class="link" href="https://github.com/TakeScoop/SwiftyRSA/blob/master/LICENSE">https://github.com/TakeScoop/SwiftyRSA/blob/master/LICENSE</a>
+    </div>
 
-<div><b>swift-sh</b>
-<br/>
-Unlicense (Public Domain)
-<br/>
-<a class="link" href="https://github.com/mxcl/swift-sh/blob/master/LICENSE.md">https://github.com/mxcl/swift-sh/blob/master/LICENSE.md</a>
-</div>
+    <div>
+        <strong>swift-sh</strong>
+        <br/>
+        Unlicense (Public Domain)
+        <br/>
+        <a class="link" href="https://github.com/mxcl/swift-sh/blob/master/LICENSE.md">https://github.com/mxcl/swift-sh/blob/master/LICENSE.md</a>
+    </div>
 
-<div><b>SwCrypt</b>
-<br/>
-MIT License
-<br/>
-<a class="link" href="https://github.com/soyersoyer/SwCrypt/blob/master/LICENSE.md">https://github.com/soyersoyer/SwCrypt/blob/master/LICENSE.md</a>
-</div>
+    <div>
+        <strong>SwCrypt</strong>
+        <br/>
+        MIT License
+        <br/>
+        <a class="link" href="https://github.com/soyersoyer/SwCrypt/blob/master/LICENSE.md">https://github.com/soyersoyer/SwCrypt/blob/master/LICENSE.md</a>
+    </div>
 
-<div><b>ZipFoundation</b>
-<br/>
-MIT License
-<br/>
-<a class="link" href="https://github.com/weichsel/ZIPFoundation/blob/main/LICENSE">https://github.com/weichsel/ZIPFoundation/blob/main/LICENSE</a>
-</div>
+    <div>
+        <strong>ZipFoundation</strong>
+        <br/>
+        MIT License
+        <br/>
+        <a class="link" href="https://github.com/weichsel/ZIPFoundation/blob/main/LICENSE">https://github.com/weichsel/ZIPFoundation/blob/main/LICENSE</a>
+    </div>
 
-<div><b>mid-rest-java-client</b>
-<br/>
-MIT License
-<br/>
-<a class="link" href="https://github.com/SK-EID/mid-rest-java-client/blob/master/LICENSE">https://github.com/SK-EID/mid-rest-java-client/blob/master/LICENSE</a>
-</div>
+    <div>
+        <strong>mid-rest-java-client</strong>
+        <br/>
+        MIT License
+        <br/>
+        <a class="link" href="https://github.com/SK-EID/mid-rest-java-client/blob/master/LICENSE">https://github.com/SK-EID/mid-rest-java-client/blob/master/LICENSE</a>
+    </div>
 
-<div><b>ILPDFKit</b>
-<br/>
-MIT License
-<br/>
-<a class="link" href="https://github.com/derekblair/ILPDFKit/blob/master/LICENSE">https://github.com/derekblair/ILPDFKit/blob/master/LICENSE</a>
+    <div>
+        <strong>ILPDFKit</strong>
+        <br/>
+        MIT License
+        <br/>
+        <a class="link" href="https://github.com/derekblair/ILPDFKit/blob/master/LICENSE">https://github.com/derekblair/ILPDFKit/blob/master/LICENSE</a>
+    </div>
 </div>
