Accessible DigiDoc and EL icons

--- a/MoppApp/MoppApp/AboutContent/about_en.html
+++ b/MoppApp/MoppApp/AboutContent/about_en.html
@@ -1,15 +1,23 @@
 <html>
-<head><meta charset="UTF-8">
-<link rel="stylesheet" type="text/css" href="about.css">
-</head>
-<body>
-<div aria-hidden="true"><img aria-hidden="true" alt="" role="presentation" src="main_about_fonds_en.png"/></div>
-<div><h1>RIA DigiDoc version [APP_VERSION]</h1></div>
-<div>Estonian ID-software is released by Information System Authority</div>
-<div>In case of questions please conctact our support via
-<a href="https://www.id.ee/en/">id.ee</a></div>
-<br/>
-<div><h2>Additional licenses and components</h2></div>
-[LICENSES]
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="about.css">
+    </head>
+    <body>
+        <div>
+            <img aria-label="The project is supported by the European Regional Development Fund" alt="The project is supported by the European Regional Development Fund" role="presentation" src="main_about_fonds_en.png"/>
+        </div>
+        <div>
+            <h1>RIA DigiDoc version [APP_VERSION]</h1>
+        </div>
+        <div>Estonian ID-software is released by Information System Authority</div>
+        <div>In case of questions please conctact our support via
+            <a href="https://www.id.ee/en/">id.ee</a>
+        </div>
+        <br/>
+        <div>
+            <h2>Additional licenses and components</h2>
+        </div>
+        [LICENSES]
+    </body>
 </html>
