--- a/MoppApp/MoppApp/AboutContent/about_ru.html
+++ b/MoppApp/MoppApp/AboutContent/about_ru.html
@@ -1,15 +1,23 @@
 <html>
-<head><meta charset="UTF-8">
-<link rel="stylesheet" type="text/css" href="about.css">
-</head>
-<body>
-<div aria-hidden="true"><img aria-hidden="true" alt="" role="presentation" src="main_about_fonds_en.png"/></div>
-<div><h1>RIA DigiDoc версия [APP_VERSION]</h1></div>
-<div>Эстонское программное обеспечение ID выпущено Государственным департаментом инфосистем</div>
-<div>Если у вас возникнут вопросы, пожалуйста, обратитесь на
-<a href="https://www.id.ee/ru/">id.ee</a></div>
-<br/>
-<div><h2>Дополнительные лицензии и компоненты</h2></div>
-[LICENSES]
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="about.css">
+    </head>
+    <body>
+        <div>
+            <img aria-label="Проект поддерживается Европейским фондом регионального развития" alt="Проект поддерживается Европейским фондом регионального развития" role="presentation" src="main_about_fonds_en.png"/>
+        </div>
+        <div>
+            <h1>RIA DigiDoc версия [APP_VERSION]</h1>
+        </div>
+        <div>Эстонское программное обеспечение ID выпущено Государственным департаментом инфосистем</div>
+        <div>Если у вас возникнут вопросы, пожалуйста, обратитесь на
+            <a href="https://www.id.ee/ru/">id.ee</a>
+        </div>
+        <br/>
+        <div>
+            <h2>Дополнительные лицензии и компоненты</h2>
+        </div>
+        [LICENSES]
+    </body>
 </html>
