Added Voice Control support for settings

--- a/MoppApp/MoppApp/AboutContent/about_ru.html
+++ b/MoppApp/MoppApp/AboutContent/about_ru.html
@@ -4,20 +4,22 @@
         <link rel="stylesheet" type="text/css" href="about.css">
     </head>
     <body>
-        <div>
+        <div aria-disabled="true">
             <img aria-label="Проект поддерживается Европейским фондом регионального развития" alt="Проект поддерживается Европейским фондом регионального развития" role="presentation" src="main_about_fonds_en.png"/>
         </div>
-        <div>
+        <div aria-disabled="true">
             <h1>RIA DigiDoc версия [APP_VERSION]</h1>
         </div>
-        <div>Эстонское программное обеспечение ID выпущено Государственным департаментом инфосистем</div>
-        <div>Если у вас возникнут вопросы, пожалуйста, обратитесь на
+        <div aria-disabled="true">Эстонское программное обеспечение ID выпущено Государственным департаментом инфосистем</div>
+        <div aria-disabled="true">Если у вас возникнут вопросы, пожалуйста, обратитесь на
             <a href="https://www.id.ee/ru/">id.ee</a>
         </div>
         <br/>
-        <div>
+        <div aria-disabled="true">
             <h2>Дополнительные лицензии и компоненты</h2>
         </div>
-        [LICENSES]
+        <div aria-disabled="true">
+            [LICENSES]
+        </div>
     </body>
 </html>
